# Resonance

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: .docker-ci.yml
include/: debug.h  material_presets.h  mesh_loader.h  simulation.h
python/: acoustic_metrics.py  acoustic_simulator.py  process_audio.py  visualize.py
src/: main.cpp
src/cpu/: simulation_cpu.cpp
src/gpu/: simulation.cuh  simulation_gpu.cu
src/metal/: simulation_metal.h  simulation_metal.mm
tests/: test_bugs.py  test_metal.py  test_phase1.py  test_phase2.py  test_sah_materials.py
web/backend/: requirements.txt  server.py
web/deploy/: install.sh  patch_files.py  supervisord-user.conf
web/frontend/: index.html  style.css
web/frontend/js/: app.js  audio.js  scene.js
